--- a/index.html
+++ b/index.html
@@ -3,9 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="main.css"> 
+    <link rel="stylesheet" href="font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="javascripts/parallax.min.js"></script>
+    <title>COSMOS</title>
 </head>
+
 <body>
     
+    <section class="vid-bg">
+        <div class="video-container">
+            <video src="videos/mainu.mp4" autoplay muted loop>
+            </video>
+        </div>
+        
+        <div class="content-1">
+            <header>
+            <h1>Welcome To The Solar System</h1>
+            </header>
+        </div>
+    </section>
 </body>
 </html>
