--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css"> 
-    <link rel="stylesheet" href="font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script src="javascripts/parallax.min.js"></script>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+
     <title>COSMOS</title>
 </head>
 
@@ -20,8 +19,21 @@
         
         <div class="content-1">
             <header>
-            <h1>Welcome To The Solar System</h1>
+            <h1>Welcome To The COSMOS</h1>
             </header>
+        </div>
+        
+    </section>
+
+   
+
+    <section class="img-bg" data-bg='images/banner1.jpg'>
+        <div class="inner">
+            <article class="box">
+                <div class="content-2">
+                    <p>The Solar System is the gravitationally bound system of the Sun and the objects that orbit it, either directly or indirectly. Of the objects that orbit the Sun directly, the largest are the eight planets, with the remainder being smaller objects, the dwarf planets and small Solar System bodies. Of the objects that orbit the Sun indirectly—the moons—two are larger than the smallest planet, Mercury. The Solar System formed 4.6 billion years ago from the gravitational collapse of a giant interstellar molecular cloud. The vast majority of the system's mass is in the Sun, with the majority of the remaining mass contained in Jupiter. The four smaller inner planets, Mercury, Venus, Earth and Mars, are terrestrial planets, being primarily composed of rock and metal. The four outer planets are giant planets, being substantially more massive than the terrestrials. The two largest, Jupiter and Saturn, are gas giants, being composed mainly of hydrogen and helium; the two outermost planets, Uranus and Neptune, are ice giants, being composed mostly of substances with relatively high melting points compared with hydrogen and helium, called volatiles, such as water, ammonia and methane. All eight planets have almost circular orbits that lie within a nearly flat disc called the ecliptic.</p>
+                </div>
+            </article>
         </div>
     </section>
 </body>
